@@ -55,7 +55,7 @@
 ;
 ;  Wikiwyg     http://openjsan.org/doc/i/in/ingy/Wikiwyg/
 ;  tinymce     http://tinymce.moxiecode.com/ 
-;  FCKeditor   http://fckeditor.net/ 
+;  CKeditor    http://ckeditor.com/ 
 ;  spaw        http://sourceforge.net/projects/spaw 
 ;  htmlarea3   
 ;  htmlarea2   
